<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:padding="16dp">

    <!-- Logo -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/logo_Image"
            app:srcCompat="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mood_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="Mood Tracker"
            app:titleTextColor="@android:color/white" />
        <!-- "Select Date" button -->
        <TextView
            android:id="@+id/mood_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="1dp"
            android:text="@string/what_mood_are_you_in_click_the_corresponding_button"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_date"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="false"
            android:gravity="center"
            android:hint="Select date"
            android:importantForAutofill="no"
            android:inputType="date" />

        <!-- Buttons representing different moods -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_happy"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/happy"
                    android:textAllCaps="true" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_sad"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/sad"
                    android:textAllCaps="true" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_angry"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/angry"
                    android:textAllCaps="true" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_annoyed"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/annoyed"
                    android:textAllCaps="true" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_nervous"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/nervous"
                    android:textAllCaps="true" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_calm"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/calm"
                    android:textAllCaps="true" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_save_mood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="Save Entry" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
