<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/logo_Image"
            app:srcCompat="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/meal_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="Meal Tracker"
            app:titleTextColor="@android:color/white" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_date"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="false"
            android:gravity="center"
            android:hint="Select a date"
            android:importantForAutofill="no"
            android:inputType="date" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="Meal Name">

            <AutoCompleteTextView
                android:id="@+id/mealNameInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:inputType="text"
                android:importantForAutofill="yes"
                android:gravity="center"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_calorie_intake"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/enter_calorie_intake"
            android:importantForAutofill="no"
            android:inputType="number" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save_meal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/save_meal" />


    </LinearLayout>

</RelativeLayout>
